<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register_act"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".PrivateRegisterActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.06" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.35">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="30dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_private_regis_custom" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.04" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.55">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:clipToPadding="false"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/inputGender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:textColorHint="@color/registerAccentColor"
                            app:errorEnabled="false"
                            app:errorTextAppearance="@style/RegisterErrorInput.Theme">

                            <TextView
                                android:id="@+id/txtChooseGender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:fontFamily="serif"
                                android:text="@string/gender_title"
                                android:textColor="@color/registerAccentColor"
                                android:textSize="12sp"
                                android:textStyle="normal"
                                android:typeface="normal" />

                            <RadioGroup
                                android:id="@+id/rdoGrpGender"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent">

                                <RadioButton
                                    android:id="@+id/rdoBtnMale"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/registerAccentColor"
                                    android:fontFamily="serif"
                                    android:text="@string/gender_male"
                                    android:textAlignment="viewStart"
                                    android:textColor="@color/registerAccentColor"
                                    android:textSize="14sp"
                                    android:typeface="normal" />

                                <RadioButton
                                    android:id="@+id/rdoBtnFemale"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/registerAccentColor"
                                    android:fontFamily="serif"
                                    android:text="@string/gender_female"
                                    android:textAlignment="viewStart"
                                    android:textColor="@color/registerAccentColor"
                                    android:textSize="14sp"
                                    android:typeface="normal" />

                            </RadioGroup>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/inputBirthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:textColorHint="@color/registerAccentColor"
                            app:errorEnabled="false"
                            app:errorTextAppearance="@style/RegisterErrorInput.Theme">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/regisBirthday"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/birthday_title"
                                android:inputType="date"
                                android:theme="@style/RegisterInput.Theme" />
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/btnNextStep"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="40dp"
                            android:background="@drawable/btn_auth_bg"
                            android:text="@string/register_next_btn"
                            android:textAllCaps="false"
                            android:textColor="@color/registerPrimaryColor" />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="serif"
                android:text="@string/login_txt"
                android:textColor="@color/registerTxtColor"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="normal" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>