<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register_act"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".IntroRegisterActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:gravity="bottom" >

                        <TextView
                            android:id="@+id/txtJoinAppTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="serif"
                            android:text="@string/join_app_title"
                            android:textColor="@color/registerTxtColor"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="normal" />

                        <TextView
                            android:id="@+id/txtJoinAppDetails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="serif"
                            android:text="@string/join_app_details"
                            android:textColor="@color/registerTxtColor"
                            android:textSize="14sp"
                            android:textAlignment="center"
                            android:textStyle="normal"
                            android:typeface="normal"
                            android:layout_marginTop="10dp"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:clipToPadding="false"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnLetsBegin"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/btn_auth_bg"
                            android:text="@string/register_intro_btn"
                            android:textAllCaps="false"
                            android:textColor="@color/registerPrimaryColor" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="serif"
                android:text="@string/login_txt"
                android:textColor="@color/registerTxtColor"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="normal" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>